# 2233recorder

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODOList.md  pyproject.toml  requirements.txt  开发进程.md  设计思路.md
config/: config.example.yaml  rooms.example.yaml
src/api/: bilibili_api.py
src/config/: config.py
src/monitor/: monitor.py  trigger.py
src/processor/: converter.py  watermark.py
src/recorder/: core.py  updater.py
src/web/: app.py
tests/: test_bilibili_api.py  test_integration.py
