[project]
name = "2233recorder"
version = "0.1.0"
description = "A Linux-based live streaming recorder with web management interface"
authors = [{ name = "Ink-dark", email = "ink-dark@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Video :: Capture",
]

[project.dependencies]
requests = "^2.31.0"
pyyaml = "^6.0.1"
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
ffmpeg-python = "^0.2.0"

[project.scripts]
2233recorder = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"]
python_functions = "test_*"